--- a/config/defaults.cfg
+++ b/config/defaults.cfg
@@ -3,6 +3,7 @@ save_dir = saves/defaults
 word_file = %(save_dir)s/words.txt
 tag_file = %(save_dir)s/tags.txt
 rel_file = %(save_dir)s/rels.txt
+clt_file = %(save_dir)s/clts.txt
 embed_dir = data/glove.6B
 embed_file = %(embed_dir)s/en.100d.txt
 embed_aux_file = %(embed_dir)s/en.100d.aux.txt
@@ -45,6 +46,7 @@ word_l2_reg = 0
 [Dropout]
 word_keep_prob = .67
 tag_keep_prob = .67
+clt_keep_prob = 1
 rel_keep_prob = 1
 recur_keep_prob = .67
 ff_keep_prob = .67
