--- a/config/sv.guo.id.cfg
+++ b/config/sv.guo.id.cfg
@@ -1,9 +1,9 @@
 [OS]
-save_dir = saves/exp-dir
+save_dir = saves/sv-guo-id
 embed_dir = wrd-emb
 embed_file = %(embed_dir)s/wrd-emb-opt
-clt_src=clt-opt
-data_dir = data/il-id
+clt_src=id
+data_dir = data/sv
 embed_clt_file=%(data_dir)s/brown.256.20.vec.vec
 train_file = %(data_dir)s/train.all.fix
 valid_file = %(data_dir)s/dev.lc.lid
