--- a/config/sv-guo-id.cfg
+++ b/config/sv-guo-id.cfg
@@ -1,7 +1,7 @@
 [OS]
 save_dir = saves/sv-guo-id
 embed_dir = wrd-emb
-embed_file = %(embed_dir)s/wrd-emb-opt
+embed_file = %(embed_dir)s/guo.vec
 clt_src=id
 data_dir = data/sv
 embed_clt_file=%(data_dir)s/brown.256.20.vec.vec
