--- a/config/fr-guo-id.cfg
+++ b/config/fr-guo-id.cfg
@@ -1,9 +1,9 @@
 [OS]
-save_dir = saves/pt-guo-id
+save_dir = saves/fr-guo-id
 embed_dir = wrd-emb
 embed_file = %(embed_dir)s/guo.vec
 clt_src=id
-data_dir = data/pt
+data_dir = data/fr
 embed_clt_file=%(data_dir)s/brown.256.20.vec.vec
 train_file = %(data_dir)s/train.all.fix
 valid_file = %(data_dir)s/dev.lc.lid
