--- a/config/tmp.baseline.cfg
+++ b/config/tmp.baseline.cfg
@@ -7,7 +7,7 @@ data_dir = data/il-id
 embed_clt_file=%(data_dir)s/brown.256.20.vec.vec
 train_file = %(data_dir)s/train.all.fix
 valid_file = %(data_dir)s/dev.lc.lid
-test_file = %(data_dir)s/test.lc.lid
+test_file = %(data_dir)s/test-file
 
 
 
