--- a/config/de-guo-id.cipher.cfg
+++ b/config/de-guo-id.cipher.cfg
@@ -1,13 +1,13 @@
 [OS]
-save_dir = saves/exp-dir
+save_dir = saves/de-guo-id
 embed_dir = wrd-emb
-embed_file = %(embed_dir)s/wrd-emb-file
-clt_src=clt-opt
-data_dir = data/il-id
+embed_file = %(embed_dir)s/guo.vec
+clt_src=id
+data_dir = data/de
 embed_clt_file=%(data_dir)s/brown.256.20.vec.vec
 train_file = %(data_dir)s/train.all.fix
 valid_file = %(data_dir)s/dev.lc.lid
-test_file = %(data_dir)s/test-file
+test_file = %(data_dir)s/test.conllu.cipher
 
 
 
@@ -49,7 +49,7 @@ chi = 0
 
 [Training]
 pretrain_iters = 100
-train_iters = 10000
+train_iters = 20000
 train_batch_size = 5000
 test_batch_size = 0
 validate_every = 100
