--- a/config/sv-guo-id.cipher.cfg
+++ b/config/sv-guo-id.cipher.cfg
@@ -1,13 +1,13 @@
 [OS]
-save_dir = saves/fr-guo-id
+save_dir = saves/sv-guo-id
 embed_dir = wrd-emb
 embed_file = %(embed_dir)s/guo.vec
 clt_src=id
-data_dir = data/fr
+data_dir = data/sv
 embed_clt_file=%(data_dir)s/brown.256.20.vec.vec
 train_file = %(data_dir)s/train.all.fix
 valid_file = %(data_dir)s/dev.lc.lid
-test_file = %(data_dir)s/test.lc.lid
+test_file = %(data_dir)s/test.conllu.cipher
 
 
 
