--- a/config/de-guo-id.cipher.cfg
+++ b/config/de-guo-id.cipher.cfg
@@ -8,7 +8,7 @@ embed_clt_file=%(data_dir)s/brown.256.20.vec.vec
 train_file = %(data_dir)s/train.all.fix
 valid_file = %(data_dir)s/dev.lc.lid
 test_file = %(data_dir)s/test.conllu.cipher
-
+zero_wrd_emb = True
 
 
 [Dataset]
@@ -34,8 +34,8 @@ word_keep_prob = .5
 tag_keep_prob = 0.8
 clt_keep_prob = 1
 rel_keep_prob = 1
-ff_keep_prob = .67
-mlp_keep_prob = .67
+ff_keep_prob = .8
+mlp_keep_prob = .8
 
 
 [Learning rate]
@@ -49,7 +49,7 @@ chi = 0
 
 [Training]
 pretrain_iters = 100
-train_iters = 20000
+train_iters = 10000
 train_batch_size = 5000
 test_batch_size = 0
 validate_every = 100
