--- a/config/defaults.cfg
+++ b/config/defaults.cfg
@@ -11,6 +11,7 @@ data_dir = data/PTB/Stanford_3_5_0
 train_file = %(data_dir)s/train.stanford.conll
 valid_file = %(data_dir)s/dev.stanford.conll
 test_file = %(data_dir)s/test.stanford.conll
+zero_wrd_emb = False
 
 [Dataset]
 cased = False
