--- a/config/tmp.baseline.cfg
+++ b/config/tmp.baseline.cfg
@@ -4,11 +4,11 @@ embed_dir = wrd-emb
 embed_file = %(embed_dir)s/wrd-emb-file
 clt_src=clt-opt
 data_dir = data/il-id
-embed_clt_file=%(data_dir)s/brown.256.20.vec.vec
+embed_clt_file=%(data_dir)s/multi/vectors.txt
 train_file = %(data_dir)s/train.all.fix
 valid_file = %(data_dir)s/dev.lc.lid
 test_file = %(data_dir)s/test-file
-
+zero_wrd_emb = zwe-opt
 
 
 [Dataset]
@@ -34,8 +34,8 @@ word_keep_prob = .5
 tag_keep_prob = 0.8
 clt_keep_prob = 1
 rel_keep_prob = 1
-ff_keep_prob = .67
-mlp_keep_prob = .67
+ff_keep_prob = .8
+mlp_keep_prob = .8
 
 
 [Learning rate]
