--- a/config/tmp.baseline.cfg
+++ b/config/tmp.baseline.cfg
@@ -1,7 +1,7 @@
 [OS]
 save_dir = saves/exp-dir
 embed_dir = wrd-emb
-embed_file = %(embed_dir)s/wrd-emb-file
+embed_file = %(embed_dir)s/guo.vec
 clt_src=clt-opt
 data_dir = data/il-id
 embed_clt_file=data/multi-clt-emb.vec
