--- a/config/de-guo-id.cfg
+++ b/config/de-guo-id.cfg
@@ -4,11 +4,11 @@ embed_dir = wrd-emb
 embed_file = %(embed_dir)s/guo.vec
 clt_src=id
 data_dir = data/de
-embed_clt_file=%(data_dir)s/brown.256.20.vec.vec
+embed_clt_file=data/multi-clt-emb.vec
 train_file = %(data_dir)s/train.all.fix
 valid_file = %(data_dir)s/dev.lc.lid
 test_file = %(data_dir)s/test.lc.lid
-zero_wrd_emb = True
+zero_wrd_emb = False
 
 
 [Dataset]
@@ -17,7 +17,7 @@ n_bkts = 35
 n_valid_bkts = 10
 
 [Layers]
-n_recur = 4
+n_recur = 2
 
 
 [Sizes]
