--- a/config/tmp.baseline.cfg
+++ b/config/tmp.baseline.cfg
@@ -5,9 +5,9 @@ embed_file = %(embed_dir)s/guo.vec
 clt_src=clt-opt
 data_dir = data/il-id
 embed_clt_file=data/multi-clt-emb.vec
-train_file = %(data_dir)s/train.all.fix
-valid_file = %(data_dir)s/dev.lc.lid
-test_file = %(data_dir)s/test-file
+train_file = %(data_dir)s/train.all.fix-train-noise-opt
+valid_file = %(data_dir)s/dev.lc.lid-dev-noise-opt
+test_file = %(data_dir)s/test-file-test-noise-opt
 zero_wrd_emb = zwe-opt
 
 
