--- a/config/defaults.cfg
+++ b/config/defaults.cfg
@@ -4,6 +4,7 @@ word_file = %(save_dir)s/words.txt
 tag_file = %(save_dir)s/tags.txt
 rel_file = %(save_dir)s/rels.txt
 clt_file = %(save_dir)s/clts.txt
+clt_src=clt-opt
 embed_dir = data/glove.6B
 embed_file = %(embed_dir)s/en.100d.txt
 embed_aux_file = %(embed_dir)s/en.100d.aux.txt
@@ -12,6 +13,7 @@ train_file = %(data_dir)s/train.stanford.conll
 valid_file = %(data_dir)s/dev.stanford.conll
 test_file = %(data_dir)s/test.stanford.conll
 zero_wrd_emb = False
+unk_pos = False
 
 [Dataset]
 cased = False
