--- a/config/de-guo-id.cfg
+++ b/config/de-guo-id.cfg
@@ -1,5 +1,5 @@
 [OS]
-save_dir = saves/de-guo-id-not-noisy
+save_dir = saves/de-guo-id
 embed_dir = wrd-emb
 embed_file = %(embed_dir)s/guo.vec
 clt_src=id
