--- a/config/it-unk-emb.cfg
+++ b/config/it-unk-emb.cfg
@@ -1,14 +1,14 @@
 [OS]
-save_dir = saves/sv-guo-id-not-noisy
+save_dir = saves/it-unk-emb
 embed_dir = wrd-emb
 embed_file = %(embed_dir)s/guo.vec
-clt_src=id
-data_dir = data/sv
+clt_src=emb
+data_dir = data/it
 embed_clt_file=data/multi-clt-emb.vec
 train_file = %(data_dir)s/train.all.fix
 valid_file = %(data_dir)s/dev.lc.lid
 test_file = %(data_dir)s/test.lc.lid
-zero_wrd_emb = False
+zero_wrd_emb = True
 
 
 [Dataset]
