--- a/config/defaults.cfg
+++ b/config/defaults.cfg
@@ -14,6 +14,7 @@ valid_file = %(data_dir)s/dev.stanford.conll
 test_file = %(data_dir)s/test.stanford.conll
 zero_wrd_emb = False
 unk_pos = False
+unk_train_pos = False
 
 [Dataset]
 cased = False
