--- a/config/defaults.cfg
+++ b/config/defaults.cfg
@@ -13,7 +13,7 @@ train_file = %(data_dir)s/train.stanford.conll
 valid_file = %(data_dir)s/dev.stanford.conll
 test_file = %(data_dir)s/test.stanford.conll
 zero_wrd_emb = False
-unk_pos = False
+zero_test_pos = False
 unk_train_pos = False
 
 [Dataset]
