--- a/config/de-muse-gold-.cfg
+++ b/config/de-muse-gold-.cfg
@@ -1,15 +1,15 @@
 [OS]
-save_dir = saves/exp-dir
+save_dir = saves/de-muse-gold-
 embed_dir = wrd-emb
-embed_file = %(embed_dir)s/we-opt.vec
-clt_src=clt-opt
-data_dir = data/il-id
+embed_file = %(embed_dir)s/.vec
+clt_src=gold
+data_dir = data/de
 embed_clt_file=data/multi-clt-emb.vec
 train_file = %(data_dir)s/train.all.fix
 valid_file = %(data_dir)s/dev.lc.lid
-test_file = %(data_dir)s/test-file
+test_file = %(data_dir)s/test.lc.lid
 zero_wrd_emb = False
-unk_train_pos = unk-pos-opt
+unk_train_pos = False
 
 [Dataset]
 min_occur_count = 2
